# Idincode-researche

./: .env.example  README.md  pyproject.toml  requirements.txt  run.py  targets.yaml
.github/workflows/: research.yml  validate.yml
scripts/: validate_targets.py
src/: __init__.py  analyst.py  config.py  enrichers.py  export.py  models.py  pipeline.py  qualifier.py  targets_loader.py
src/enrichers/: __init__.py  fetcher.py  orchestrator.py  pagespeed.py  pixels.py  techstack.py  test_enrichers.py
src/enrichers/enrichers/: __init__.py
src/qualifiers/: config.py  engine.py
tests/: test_enrichers.py  test_qualifier.py
